--- a/CareerTestWeb/Views/CareerTest/Result.cshtml
+++ b/CareerTestWeb/Views/CareerTest/Result.cshtml
@@ -9,7 +9,7 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a asp-controller="Home" asp-action="Index">Trang chủ</a></li>
-                <li class="breadcrumb-item"><a asp-controller="CareerTest" asp-action="Index">Bài Test MBTI</a></li>
+                <li class="breadcrumb-item"><a asp-controller="CareerTest" asp-action="Test">Bài Test MBTI</a></li>
                 <li class="breadcrumb-item active">Kết Quả</li>
             </ol>
         </nav>
