--- a/CareerTestWeb/Views/PersonalityTypes/ENFJ.cshtml
+++ b/CareerTestWeb/Views/PersonalityTypes/ENFJ.cshtml
@@ -8,6 +8,7 @@
         <div class="col-lg-8 mx-auto">
             <!-- Header Section -->
             <div class="text-center mb-5">
+                <img src="https://mbti.vn/img/ENFJ.svg" alt="ENFJ Logo" class="img-fluid mb-3 d-block mx-auto" style="max-width: 200px; height: auto;">
                 <div class="personality-badge bg-primary text-white rounded-circle mx-auto mb-3 d-flex align-items-center justify-content-center" style="width: 100px; height: 100px;">
                     <span class="fw-bold fs-3">ENFJ</span>
                 </div>
@@ -25,6 +26,7 @@
                     <p class="card-text">
                         Với khả năng nhìn thấy tiềm năng ở người khác, ENFJ thường thúc đẩy mọi người trở thành phiên bản tốt nhất của chính họ. Họ có tầm nhìn rõ ràng về những gì có thể đạt được và nhiệt tình dẫn dắt người khác hướng tới mục tiêu đó.
                     </p>
+                    <img src="https://mbti.vn/Files/Images/ENFJ/Khai-niem-ENFJ.jpg" alt="ENFJ Illustration" class="img-fluid rounded mb-4 d-block mx-auto" style="max-width: 50%; height: auto;">
                 </div>
             </div>
 
@@ -178,6 +180,26 @@
 
         h1, h2, h3, h4, h5, h6 {
             color: #4e73df;
+        }
+
+        .img-fluid {
+            max-width: 50%;
+            height: auto;
+        }
+
+        .img-logo {
+            max-width: 200px;
+            height: auto;
+        }
+
+        .rounded {
+            border-radius: 12px !important;
+        }
+
+        .d-block.mx-auto {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
     </style>
 }
