--- a/CareerTestWeb/Views/Shared/_Layout.cshtml
+++ b/CareerTestWeb/Views/Shared/_Layout.cshtml
@@ -44,6 +44,12 @@
         </nav>
     </header>
 
+    <style>
+        .navbar-dark .navbar-nav .nav-link {
+        color: #ffffff;
+        }
+    </style>
+
 
     <div class="container-fluid p-0">
         <main role="main">
