--- a/CareerTestWeb/Views/CareerTest/Test.cshtml
+++ b/CareerTestWeb/Views/CareerTest/Test.cshtml
@@ -406,7 +406,7 @@
         <div class="feature-card">
             <div class="feature-icon">💼</div>
             <div class="feature-title">Khám phá cơ hội nghề nghiệp</div>
-            <div class="feature-desc">Khám phá <strong>40,000+ cơ hội việc làm mới nhất</strong> phù hợp với nhóm tính cách của bạn trên Topcv.vn</div>
+            <div class="feature-desc">Khám phá <strong>40,000+ cơ hội việc làm mới nhất</strong> phù hợp với nhóm tính cách của bạn trên CareerMatch</div>
         </div>
     </div>
 </div>
